--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 	<title>forms</title>
+	<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
 	<form action="">
-		<p>first name: <input placeholder=" Enter first name" type="text" name="name"></p>
+		<p>first name: <textarea placeholder=" Enter first name" type="text" name="name"></p>
 		<p> last name: <input type="text" name="last"></p>
 		<p>password: <input type="password" name="passw"></p>
 		<p>stay logged in: <input type="checkbox" name=""></p>
 		<p>male: <input type="radio" name="sex"></p>
 		<p>female: <input type="radio" name="sex"></p>
-		<p>choose color: <input type="color" name=""></p>
+		<p>choose color: <input type="color" name="set"></p>
 		<p>submit <input type="submit" value="Принять!!!"></p>
 	</form>
 
